Squashing bugs and getting ready for within-lab beta

--- a/main/www/css/style.css
+++ b/main/www/css/style.css
@@ -177,6 +177,14 @@ input[type="search"] {
   background: unset !important;
 }
 
+.dwnld > a {
+  float: right !important;
+}
+
+.main-svg {
+  padding-top: 20.5px;
+}
+
 footer, .content:after {
   height: 50px;
 }
